[gd_scene load_steps=4 format=3 uid="uid://bjcwo1i2okhjd"]

[ext_resource type="Script" uid="uid://vbe5fgpbvoj0" path="res://Scripts/main_menu.gd" id="1_72til"]
[ext_resource type="Texture2D" uid="uid://c12pyevx1j2" path="res://Assets/Textures/wallhaven-jx628m.png" id="2_5o3oe"]
[ext_resource type="Theme" uid="uid://bqyj23m0yjbg4" path="res://Assets/main_ui.tres" id="3_2xgm3"]

[node name="Module_Loader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72til")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_2xgm3")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_5o3oe")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_2xgm3")
theme_type_variation = &"BoldLabel"
text = "Kaland játék kockázat"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Module ID input"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ModuleIDInput" type="LineEdit" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DownloadButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Download"

[node name="StatusLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Menu"

[node name="DownloadRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
